# laba_6

./: CMakeLists.txt  README.md
.github/workflows/: c-cpp.yml
gtest/: CMakeLists.txt  number_tests.cpp
lib/: number.cpp  number.h
